force-app/main/default/objects/Timeline_Event__c/Timeline_Event__c.object-meta.xml
<CustomObject>
    <label>Timeline Event</label>
    <nameField>
        <displayFormat>EVT-{000000}</displayFormat>
        <label>Timeline Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timeline Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>