force-app/main/default/objects/Timeline_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied for Loan</fullName>
            </value>
            <value>
                <fullName>Cancelled Loan Application</fullName>
            </value>
            <value>
                <fullName>Loan Application Denied</fullName>
            </value>
            <value>
                <fullName>Received Loan</fullName>
            </value>
            <value>
                <fullName>Paid off Loan</fullName>
            </value>
            <value>
                <fullName>Opened Bank Account</fullName>
            </value>
            <value>
                <fullName>Closed Bank Account</fullName>
            </value>
            <value>
                <fullName>Started Employment</fullName>
            </value>
            <value>
                <fullName>Ended Employment</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>