force-app/main/default/objects/Timeline_Event__c/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <description>It will store the main object Id such Account, Contact</description>
    <label>Object Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>