force-app/main/default/objects/Timeline_Event__c/fields/Related_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_User_Id__c</fullName>
    <label>Related User Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>