force-app/main/default/objects/Timeline_Event__c/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <label>Subtitle</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>